Created Azure publish profile with SQL Database dependency configured

--- a/DevPath.csproj
+++ b/DevPath.csproj
@@ -204,6 +204,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="AppSettings.config" />
     <Content Include="ConnectionStrings.config" />
+    <None Include="Properties\PublishProfiles\DevPath - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
