--- a/Web.config
+++ b/Web.config
@@ -16,6 +16,7 @@
 		<authentication mode="None" />
 		<compilation debug="true" targetFramework="4.7.2" />
 		<httpRuntime targetFramework="4.7.2" />
+		<customErrors mode="Off" />
 	</system.web>
 	<system.webServer>
 		<modules>
@@ -71,6 +72,13 @@
 		</assemblyBinding>
 	</runtime>
 	<entityFramework>
+		<!--I added this <contexts> element to <entityFramework in an effort to make the seed method apply to Azure db. I used the stackoverflow page below: -->
+		<!--https://stackoverflow.com/questions/30464500/migrations-and-configuration-seed-not-running-on-azure-deployment-->
+		<contexts>
+			<context type="DevPath.Models.ApplicationDbContext, DevPath" disableDatabaseInitialization="false" >
+				<databaseInitializer type="System.Data.Entity.MigrateDatabaseToLatestVersion`2[[DevPath.Models.ApplicationDbContext, DevPath], [DevPath.Migrations.Configuration, DevPath, Version=1.0.0.0, Culture=neutral]], EntityFramework" />
+			</context>
+		</contexts>
 		<providers>
 			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
 		</providers>
