--- a/DevPath.csproj
+++ b/DevPath.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ProjectsController.cs" />
+    <Compile Include="Controllers\SkillsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -183,11 +184,16 @@
     <Compile Include="Migrations\202204122315155_AddProjectDomainModel.designer.cs">
       <DependentUpon>202204122315155_AddProjectDomainModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202204171708363_AddedSkillDomainModel.cs" />
+    <Compile Include="Migrations\202204171708363_AddedSkillDomainModel.designer.cs">
+      <DependentUpon>202204171708363_AddedSkillDomainModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Project.cs" />
+    <Compile Include="Models\Skill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\Account\ExternalLoginConfirmationViewModel.cs" />
@@ -200,6 +206,7 @@
     <Compile Include="ViewModels\Account\SendCodeViewModel.cs" />
     <Compile Include="ViewModels\Account\VerifyCodeViewModel.cs" />
     <Compile Include="ViewModels\Projects\ProjectFormViewModel.cs" />
+    <Compile Include="ViewModels\Skills\SkillFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-DevPath.css" />
@@ -265,6 +272,8 @@
     <Content Include="Views\Projects\Index.cshtml" />
     <Content Include="Views\Projects\ProjectForm.cshtml" />
     <Content Include="Views\Projects\Details.cshtml" />
+    <Content Include="Views\Skills\SkillForm.cshtml" />
+    <Content Include="Views\Skills\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -288,6 +297,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202204122315155_AddProjectDomainModel.resx">
       <DependentUpon>202204122315155_AddProjectDomainModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202204171708363_AddedSkillDomainModel.resx">
+      <DependentUpon>202204171708363_AddedSkillDomainModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
