--- a/DevPath.csproj
+++ b/DevPath.csproj
@@ -269,11 +269,12 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Projects\Index.cshtml" />
+    <Content Include="Views\Projects\List.cshtml" />
     <Content Include="Views\Projects\ProjectForm.cshtml" />
     <Content Include="Views\Projects\Details.cshtml" />
     <Content Include="Views\Skills\SkillForm.cshtml" />
     <Content Include="Views\Skills\List.cshtml" />
+    <Content Include="Views\Skills\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
