Upgraded to Bootstrap 5

--- a/DevPath.csproj
+++ b/DevPath.csproj
@@ -176,17 +176,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202204121534311_InitialCreate.cs" />
-    <Compile Include="Migrations\202204121534311_InitialCreate.designer.cs">
-      <DependentUpon>202204121534311_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202204122315155_AddProjectDomainModel.cs" />
-    <Compile Include="Migrations\202204122315155_AddProjectDomainModel.designer.cs">
-      <DependentUpon>202204122315155_AddProjectDomainModel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202204171708363_AddedSkillDomainModel.cs" />
-    <Compile Include="Migrations\202204171708363_AddedSkillDomainModel.designer.cs">
-      <DependentUpon>202204171708363_AddedSkillDomainModel.cs</DependentUpon>
+    <Compile Include="Migrations\202204182222544_init.cs" />
+    <Compile Include="Migrations\202204182222544_init.designer.cs">
+      <DependentUpon>202204182222544_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -209,14 +201,10 @@
     <Compile Include="ViewModels\Skills\SkillFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap-DevPath.css" />
     <Content Include="Content\bootstrap-slate.css" />
-    <Content Include="Content\bootstrap-theme.css" />
-    <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
-    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
@@ -278,29 +266,18 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="fonts\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
-    <Content Include="fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
-    <Content Include="Content\bootstrap-theme.min.css.map" />
-    <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202204121534311_InitialCreate.resx">
-      <DependentUpon>202204121534311_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202204122315155_AddProjectDomainModel.resx">
-      <DependentUpon>202204122315155_AddProjectDomainModel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202204171708363_AddedSkillDomainModel.resx">
-      <DependentUpon>202204171708363_AddedSkillDomainModel.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202204182222544_init.resx">
+      <DependentUpon>202204182222544_init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
