--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -75,7 +75,7 @@
 		<!--I added this <contexts> element to <entityFramework in an effort to make the seed method apply to Azure db. I used the stackoverflow page below: -->
 		<!--https://stackoverflow.com/questions/30464500/migrations-and-configuration-seed-not-running-on-azure-deployment-->
 		<contexts>
-			<context type="DevPath.Models.ApplicationDbContext, DevPath" disableDatabaseInitialization="false" >
+			<context type="DevPath.Models.ApplicationDbContext, DevPath" disableDatabaseInitialization="false">
 				<databaseInitializer type="System.Data.Entity.MigrateDatabaseToLatestVersion`2[[DevPath.Models.ApplicationDbContext, DevPath], [DevPath.Migrations.Configuration, DevPath, Version=1.0.0.0, Culture=neutral]], EntityFramework" />
 			</context>
 		</contexts>
