--- a/DevPath.csproj
+++ b/DevPath.csproj
@@ -208,6 +208,8 @@
     <Content Include="Content\bootstrap-slate.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Icons\github.svg" />
+    <Content Include="Content\Icons\globe.svg" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
