--- a/DevPath.csproj
+++ b/DevPath.csproj
@@ -176,19 +176,20 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202204182222544_init.cs" />
-    <Compile Include="Migrations\202204182222544_init.designer.cs">
-      <DependentUpon>202204182222544_init.cs</DependentUpon>
+    <Compile Include="Migrations\202204202250200_init.cs" />
+    <Compile Include="Migrations\202204202250200_init.designer.cs">
+      <DependentUpon>202204202250200_init.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202204190321316_RenamedSkillProperties.cs" />
-    <Compile Include="Migrations\202204190321316_RenamedSkillProperties.designer.cs">
-      <DependentUpon>202204190321316_RenamedSkillProperties.cs</DependentUpon>
+    <Compile Include="Migrations\202204210118172_RefactoredProjectSkillRelationship.cs" />
+    <Compile Include="Migrations\202204210118172_RefactoredProjectSkillRelationship.designer.cs">
+      <DependentUpon>202204210118172_RefactoredProjectSkillRelationship.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Project.cs" />
+    <Compile Include="Models\ProjectSkill.cs" />
     <Compile Include="Models\Skill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -271,7 +272,12 @@
     <Content Include="Views\Skills\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <EmbeddedResource Include="Migrations\202204202250200_init.resx">
+      <DependentUpon>202204202250200_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202204210118172_RefactoredProjectSkillRelationship.resx">
+      <DependentUpon>202204210118172_RefactoredProjectSkillRelationship.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.min.css.map" />
@@ -281,13 +287,7 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202204182222544_init.resx">
-      <DependentUpon>202204182222544_init.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202204190321316_RenamedSkillProperties.resx">
-      <DependentUpon>202204190321316_RenamedSkillProperties.cs</DependentUpon>
-    </EmbeddedResource>
+    <Folder Include="App_Data\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
