Added ProjectSkills to Seed()

--- a/DevPath.csproj
+++ b/DevPath.csproj
@@ -219,6 +219,48 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Icons\github.svg" />
     <Content Include="Content\Icons\globe.svg" />
+    <Content Include="Content\Icons\project-icons\bamberga-logo-darkmode.svg" />
+    <Content Include="Content\Icons\project-icons\chat.png" />
+    <Content Include="Content\Icons\project-icons\dyno-logo-darkmode.svg" />
+    <Content Include="Content\Icons\project-icons\dyno-logo-lightmode.png" />
+    <Content Include="Content\Icons\project-icons\dyno-logo-lightmode.svg" />
+    <Content Include="Content\Icons\project-icons\honey.svg" />
+    <Content Include="Content\Icons\project-icons\island.svg" />
+    <Content Include="Content\Icons\project-icons\mountain.svg" />
+    <Content Include="Content\Icons\project-icons\strength-logo-3-lightmode.svg" />
+    <Content Include="Content\Icons\project-icons\strength-logo-darkmode.png" />
+    <Content Include="Content\Icons\skill-icons\axios-logo.png" />
+    <Content Include="Content\Icons\skill-icons\axios-logo.svg" />
+    <Content Include="Content\Icons\skill-icons\azure.png" />
+    <Content Include="Content\Icons\skill-icons\bootstrap-logo.png" />
+    <Content Include="Content\Icons\skill-icons\c#-logo.png" />
+    <Content Include="Content\Icons\skill-icons\chartjs-logo.svg" />
+    <Content Include="Content\Icons\skill-icons\commercejs-logo.jpg" />
+    <Content Include="Content\Icons\skill-icons\commercejs-logo.png" />
+    <Content Include="Content\Icons\skill-icons\csharp-logo.png" />
+    <Content Include="Content\Icons\skill-icons\google-lighthouse-logo.png" />
+    <Content Include="Content\Icons\skill-icons\google-logo.png" />
+    <Content Include="Content\Icons\skill-icons\heroku.png" />
+    <Content Include="Content\Icons\skill-icons\hostinger.svg" />
+    <Content Include="Content\Icons\skill-icons\materialui-logo.png" />
+    <Content Include="Content\Icons\skill-icons\mongodb-logo.png" />
+    <Content Include="Content\Icons\skill-icons\netlify.svg" />
+    <Content Include="Content\Icons\skill-icons\node-logo.png" />
+    <Content Include="Content\Icons\skill-icons\partnership.svg" />
+    <Content Include="Content\Icons\skill-icons\performance.svg" />
+    <Content Include="Content\Icons\skill-icons\pwa-logo.png" />
+    <Content Include="Content\Icons\skill-icons\react-icon.png" />
+    <Content Include="Content\Icons\skill-icons\react-logo.png" />
+    <Content Include="Content\Icons\skill-icons\rest_api.png" />
+    <Content Include="Content\Icons\skill-icons\secure.svg" />
+    <Content Include="Content\Icons\skill-icons\smart.svg" />
+    <Content Include="Content\Icons\skill-icons\socketio-logo.png" />
+    <Content Include="Content\Icons\skill-icons\sql-logo.png" />
+    <Content Include="Content\Icons\skill-icons\subscription.svg" />
+    <Content Include="Content\Icons\skill-icons\support.svg" />
+    <Content Include="Content\Icons\skill-icons\themeui-logo.png" />
+    <Content Include="Content\Icons\skill-icons\threejs-logo.png" />
+    <Content Include="Content\Icons\skill-icons\vite-logo.svg" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
