--- a/DevPath.csproj
+++ b/DevPath.csproj
@@ -178,21 +178,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202204251121173_init.cs" />
-    <Compile Include="Migrations\202204251121173_init.designer.cs">
-      <DependentUpon>202204251121173_init.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202204251447060_ConfiguredCompositeKeyInEmploymentListingSkillModelClass.cs" />
-    <Compile Include="Migrations\202204251447060_ConfiguredCompositeKeyInEmploymentListingSkillModelClass.designer.cs">
-      <DependentUpon>202204251447060_ConfiguredCompositeKeyInEmploymentListingSkillModelClass.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202204251631566_ChangedEmploymentListingIsRemotePropertyToWorkArrangementEnum.cs" />
-    <Compile Include="Migrations\202204251631566_ChangedEmploymentListingIsRemotePropertyToWorkArrangementEnum.designer.cs">
-      <DependentUpon>202204251631566_ChangedEmploymentListingIsRemotePropertyToWorkArrangementEnum.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202204252334540_SeedUsers.cs" />
-    <Compile Include="Migrations\202204252334540_SeedUsers.designer.cs">
-      <DependentUpon>202204252334540_SeedUsers.cs</DependentUpon>
+    <Compile Include="Migrations\202204271911010_init.cs" />
+    <Compile Include="Migrations\202204271911010_init.designer.cs">
+      <DependentUpon>202204271911010_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -204,6 +192,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\ProjectSkill.cs" />
+    <Compile Include="Models\RoleName.cs" />
     <Compile Include="Models\Skill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -279,7 +268,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="AppSettings.config" />
     <Content Include="ConnectionStrings.config" />
-    <None Include="Properties\PublishProfiles\DevPath - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\Dyno - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -335,6 +324,12 @@
     <Content Include="Views\Companies\List.cshtml" />
     <Content Include="Views\EmploymentListings\List.cshtml" />
     <Content Include="Views\EmploymentListings\EmploymentListingForm.cshtml" />
+    <Content Include="Views\Skills\ListReadOnly.cshtml" />
+    <Content Include="Views\Projects\ListReadOnly.cshtml" />
+    <Content Include="Views\Companies\ListReadOnly.cshtml" />
+    <Content Include="Views\Companies\ListAnonymous.cshtml" />
+    <Content Include="Views\EmploymentListings\ListReadOnly.cshtml" />
+    <Content Include="Views\EmploymentListings\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.min.css.map" />
@@ -347,17 +342,8 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202204251121173_init.resx">
-      <DependentUpon>202204251121173_init.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202204251447060_ConfiguredCompositeKeyInEmploymentListingSkillModelClass.resx">
-      <DependentUpon>202204251447060_ConfiguredCompositeKeyInEmploymentListingSkillModelClass.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202204251631566_ChangedEmploymentListingIsRemotePropertyToWorkArrangementEnum.resx">
-      <DependentUpon>202204251631566_ChangedEmploymentListingIsRemotePropertyToWorkArrangementEnum.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202204252334540_SeedUsers.resx">
-      <DependentUpon>202204252334540_SeedUsers.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202204271911010_init.resx">
+      <DependentUpon>202204271911010_init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
