--- a/DevPath.csproj
+++ b/DevPath.csproj
@@ -210,6 +210,10 @@
     <Compile Include="Migrations\202204282255001_AddedDateArchivedToEmploymentListing.designer.cs">
       <DependentUpon>202204282255001_AddedDateArchivedToEmploymentListing.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202204282354048_AddedRecruiterEntity.cs" />
+    <Compile Include="Migrations\202204282354048_AddedRecruiterEntity.designer.cs">
+      <DependentUpon>202204282354048_AddedRecruiterEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -222,6 +226,8 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\ProjectSkill.cs" />
+    <Compile Include="Models\Recruiter.cs" />
+    <Compile Include="Models\RecruiterClient.cs" />
     <Compile Include="Models\RoleName.cs" />
     <Compile Include="Models\Skill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -362,9 +368,7 @@
     <Content Include="Views\Projects\ListReadOnly.cshtml" />
     <Content Include="Views\Companies\ListReadOnly.cshtml" />
     <Content Include="Views\Companies\ListAnonymous.cshtml" />
-    <Content Include="Views\EmploymentListings\ListReadOnly.cshtml" />
     <Content Include="Views\EmploymentListings\Details.cshtml" />
-    <Content Include="Views\EmploymentListings\ListAuthenticated.cshtml" />
     <Content Include="Views\EmploymentListings\_ActionButtons.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -401,6 +405,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202204282255001_AddedDateArchivedToEmploymentListing.resx">
       <DependentUpon>202204282255001_AddedDateArchivedToEmploymentListing.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202204282354048_AddedRecruiterEntity.resx">
+      <DependentUpon>202204282354048_AddedRecruiterEntity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
