--- a/DevPath.csproj
+++ b/DevPath.csproj
@@ -239,9 +239,18 @@
     <Compile Include="Migrations\202205031554195_AddedDateAddedToEmploymentOfferModel.designer.cs">
       <DependentUpon>202205031554195_AddedDateAddedToEmploymentOfferModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202205041346501_AddedEmploymentEntity.cs" />
+    <Compile Include="Migrations\202205041346501_AddedEmploymentEntity.designer.cs">
+      <DependentUpon>202205041346501_AddedEmploymentEntity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205041658560_SkillHierarchy.cs" />
+    <Compile Include="Migrations\202205041658560_SkillHierarchy.designer.cs">
+      <DependentUpon>202205041658560_SkillHierarchy.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\Employment.cs" />
     <Compile Include="Models\EmploymentListingAccess.cs" />
     <Compile Include="Models\ApplicationUserProject.cs" />
     <Compile Include="Models\Company.cs" />
@@ -249,13 +258,17 @@
     <Compile Include="Models\EmploymentListing.cs" />
     <Compile Include="Models\EmploymentListingSkill.cs" />
     <Compile Include="Models\EmploymentOffer.cs" />
+    <Compile Include="Models\EmploymentProject.cs" />
+    <Compile Include="Models\EmploymentSkill.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\SkillHierarchy.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\ProjectSkill.cs" />
     <Compile Include="Models\Recruiter.cs" />
     <Compile Include="Models\RecruiterClient.cs" />
     <Compile Include="Models\RoleName.cs" />
     <Compile Include="Models\Skill.cs" />
+    <Compile Include="Models\SkillHierarchyPrerequisite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\Account\ExternalLoginConfirmationViewModel.cs" />
@@ -519,6 +532,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202205031554195_AddedDateAddedToEmploymentOfferModel.resx">
       <DependentUpon>202205031554195_AddedDateAddedToEmploymentOfferModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205041346501_AddedEmploymentEntity.resx">
+      <DependentUpon>202205041346501_AddedEmploymentEntity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205041658560_SkillHierarchy.resx">
+      <DependentUpon>202205041658560_SkillHierarchy.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
