--- a/DevPath.csproj
+++ b/DevPath.csproj
@@ -259,9 +259,25 @@
     <Compile Include="Migrations\202205041800534_Platform.designer.cs">
       <DependentUpon>202205041800534_Platform.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202205041901410_Certification.cs" />
+    <Compile Include="Migrations\202205041901410_Certification.designer.cs">
+      <DependentUpon>202205041901410_Certification.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205042006179_CourseEntity.cs" />
+    <Compile Include="Migrations\202205042006179_CourseEntity.designer.cs">
+      <DependentUpon>202205042006179_CourseEntity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205042019050_GoalEntity.cs" />
+    <Compile Include="Migrations\202205042019050_GoalEntity.designer.cs">
+      <DependentUpon>202205042019050_GoalEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\Certification.cs" />
+    <Compile Include="Models\CertificationType.cs" />
+    <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\CourseCompletion.cs" />
     <Compile Include="Models\Employment.cs" />
     <Compile Include="Models\EmploymentListingAccess.cs" />
     <Compile Include="Models\ApplicationUserProject.cs" />
@@ -272,6 +288,7 @@
     <Compile Include="Models\EmploymentOffer.cs" />
     <Compile Include="Models\EmploymentProject.cs" />
     <Compile Include="Models\EmploymentSkill.cs" />
+    <Compile Include="Models\Goal.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Platform.cs" />
     <Compile Include="Models\SkillHierarchy.cs" />
@@ -560,6 +577,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202205041800534_Platform.resx">
       <DependentUpon>202205041800534_Platform.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205041901410_Certification.resx">
+      <DependentUpon>202205041901410_Certification.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205042006179_CourseEntity.resx">
+      <DependentUpon>202205042006179_CourseEntity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205042019050_GoalEntity.resx">
+      <DependentUpon>202205042019050_GoalEntity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
