Added IsProject boolean property to CertificationType

--- a/DevPath.csproj
+++ b/DevPath.csproj
@@ -279,6 +279,10 @@
     <Compile Include="Migrations\202205042044354_RefactorUserEmploymentApplications.designer.cs">
       <DependentUpon>202205042044354_RefactorUserEmploymentApplications.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202205051534162_AddedIsAwardPropertyToCertificationType.cs" />
+    <Compile Include="Migrations\202205051534162_AddedIsAwardPropertyToCertificationType.designer.cs">
+      <DependentUpon>202205051534162_AddedIsAwardPropertyToCertificationType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -601,6 +605,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202205042044354_RefactorUserEmploymentApplications.resx">
       <DependentUpon>202205042044354_RefactorUserEmploymentApplications.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205051534162_AddedIsAwardPropertyToCertificationType.resx">
+      <DependentUpon>202205051534162_AddedIsAwardPropertyToCertificationType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
